[*]Fixed an issue where the HC bouncing config option was not being loaded properly.
[*]Fixed an issue where acacia tables would not connect to acacia fences.
[*]Fixed an issue where cherry moulding used the acacia texture in inventory.
[*]Fixed an issue where coal could not be used in ovens.
[/list]

Version 3.0.2
[list]
[*]Fixed an issue where the saw bug recently fixed in CE was persisting when deco was installed.
[*]Fixed an issue where cherry and acacia logs were missing names.
[/list]

Version 3.0.1
[list]
[*]Fixed an issue where grass died in darkness, even though it was correctly living under only torch light.
[/list]

Version 3.0.0
[list]
[*]Updated to BTW CE 1.1.X, and removed several base class modifications.
[*]Added a config option to re-enable HC bouncing.
[*]Added framed glass for each wood type, crafted with 5 moulding of the particular wood type in an X, with 4 glass shards in the remaining slots.
[*]Added iron framed glass, produced the same as above but with iron nuggets instead of moulding.
[*]Added ash blocks, which can be crafted by packing 8 potash together.
[*]Added pumice, which can be crafted by packing 2 ash blocks together.
[*]Added amethyst, which can be crafted with 4 nether quartz in a plus with purple dye in the middle.
[*]Added amethyst shards, which drop from amethyst when mined in a similar manner to glowstone. 4 shards can be crafted into an amethyst block, and an amethyst block can be crafted back into 4 shards. Additionally, amethyst shards can be crafted with 1 quartz and 1 purple dye. Amethyst shards may also be placed in the world, though they must be attached to a block to do so.
[*]Changed acacia to have the same burn time as birch (10 items), and cherry to have the same burn time as spruce (6 items).
[*]Fixed an issue where empty bookshelves were able to be decrafted into books rather than full ones.
[*]Fixed an issue where several green stairs had incorrect names.