@@ -54,7 +54,10 @@ public class EntityPlayerSP extends EntityPlayer
 
         if (par3Session != null && par3Session.username != null && par3Session.username.length() > 0)
         {
-            this.skinUrl = FCBetterThanWolves.fcPlayerSkinURL + StringUtils.stripControlCodes(par3Session.username) + ".png";
+        	// FCMOD: Changed, client only        	
+            this.skinUrl = "http://skins.minecraft.net/MinecraftSkins/" + StringUtils.stripControlCodes(par3Session.username) + ".png";
+            //this.skinUrl = FCBetterThanWolves.fcPlayerSkinURL + fetchUuid(par3Session.username);
+            // END FCMOD
         }
 
         this.username = par3Session.username;
